working on the style>color>color palette section

--- a/color.html
+++ b/color.html
@@ -25,10 +25,10 @@
 					<dt>Introduction</dt>
 				</dl>
 				<dl>
-					<dt class="">Style</dt>
+					<dt class="active">Style</dt>
 					<div style="overflow: hidden;">
 						<dd>
-							<a href="color.html">Color</a>
+							<a href="#" class="active">Color</a>
 							<a href="">Icons</a>
 							<a href="">Typography</a>
 						</dd>
@@ -65,7 +65,55 @@
 		</section>
 		
 		<section class="rightMainContainer">
-			<div><div>
+			<div class="sectionContent">
+				<h2>Color palette</h2>
+				<p>Denique Antiochensis ordinis vertices sub uno elogio iussit occidi ideo efferatus, quod ei celebrari
+				vilitatem intempestivam urgenti, cum inpenderet inopia, gravius rationabili responderunt; et perissent
+				ad unum ni comes orientis tunc Honoratus fixa constantia restitisset.</p>
+				<h3>Primary</h3>
+				<div class="colorCardContainer">
+					<div class="colorCard">
+						<div class="colorCircle veryDarkGrey"></div>
+						<div class="colorName">very dark grey</div>
+						<div class="colorCode">#5e5e5e</div>
+					</div>
+					<div class="colorCard">
+						<div class="colorCircle darkGrey"></div>
+						<div class="colorName">dark grey</div>
+						<div class="colorCode">#6e6e6e</div>
+					</div>
+					<div class="colorCard">
+						<div class="colorCircle mediumGrey"></div>
+						<div class="colorName">Medium grey</div>
+						<div class="colorCode">#a7a7a7</div>
+					</div>
+					<div class="colorCard">
+						<div class="colorCircle lightGrey"></div>
+						<div class="colorName">light grey</div>
+						<div class="colorCode">#e8e8e8</div>
+					</div>
+					<div class="colorCard">
+						<div class="colorCircle orangeMedium"></div>
+						<div class="colorName">Orange</div>
+						<div class="colorCode">#f16c4e</div>
+					</div>
+					<div class="colorCard">
+						<div class="colorCircle green"></div>
+						<div class="colorName">green</div>
+						<div class="colorCode">#2be500</div>
+					</div>
+					<div class="colorCard">
+						<div class="colorCircle yellow"></div>
+						<div class="colorName">Yellow</div>
+						<div class="colorCode">#ffeb3b</div>
+					</div>
+					<div class="colorCard">
+						<div class="colorCircle blue"></div>
+						<div class="colorName">Blue</div>
+						<div class="colorCode">#1be3e3</div>
+					</div>
+				</div>
+			<div>
 		</section>
 
 		<!-- Main script import -->
