typography page and other small changes to the color page

--- a/color.html
+++ b/color.html
@@ -30,7 +30,7 @@
 						<dd>
 							<a href="#" class="active">Color</a>
 							<a href="">Icons</a>
-							<a href="">Typography</a>
+							<a href="typography.html">Typography</a>
 						</dd>
 					</div>
 				</dl>
@@ -92,28 +92,52 @@
 						<div class="colorName">light grey</div>
 						<div class="colorCode">#e8e8e8</div>
 					</div>
+				</div>
+				
+				<h3>Secondary</h3>
+				<div class="colorCardContainer">
 					<div class="colorCard">
-						<div class="colorCircle orangeMedium"></div>
-						<div class="colorName">Orange</div>
+						<div class="secondaryColorCircle lightRed"></div>
+						<div class="colorName">Light red</div>
+						<div class="colorCode">#ff5e5e</div>
+					</div>
+					<div class="colorCard">
+						<div class="secondaryColorCircle darkOrange"></div>
+						<div class="colorName">Dark orange</div>
 						<div class="colorCode">#f16c4e</div>
 					</div>
 					<div class="colorCard">
-						<div class="colorCircle green"></div>
-						<div class="colorName">green</div>
-						<div class="colorCode">#2be500</div>
+						<div class="secondaryColorCircle orangeMedium"></div>
+						<div class="colorName">Orange</div>
+						<div class="colorCode">#ff7200</div>
 					</div>
 					<div class="colorCard">
-						<div class="colorCircle yellow"></div>
+						<div class="secondaryColorCircle secondaryOrange"></div>
+						<div class="colorName">Light orange</div>
+						<div class="colorCode">#ff8d00</div>
+					</div>					
+					<div class="colorCard">
+						<div class="secondaryColorCircle yellow"></div>
 						<div class="colorName">Yellow</div>
 						<div class="colorCode">#ffeb3b</div>
 					</div>
 					<div class="colorCard">
-						<div class="colorCircle blue"></div>
+						<div class="secondaryColorCircle secondaryGreen"></div>
+						<div class="colorName">Dark green</div>
+						<div class="colorCode">#5ad500</div>
+					</div>
+					<div class="colorCard">
+						<div class="secondaryColorCircle green"></div>
+						<div class="colorName">green</div>
+						<div class="colorCode">#2be500</div>
+					</div>
+					<div class="colorCard">
+						<div class="secondaryColorCircle blue"></div>
 						<div class="colorName">Blue</div>
 						<div class="colorCode">#1be3e3</div>
 					</div>
 				</div>
-			<div>
+			</div>
 		</section>
 
 		<!-- Main script import -->
