--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<dd>
 							<a href="color.html">Color</a>
 							<a href="">Icons</a>
-							<a href="">Typography</a>
+							<a href="typography.html">Typography</a>
 						</dd>
 					</div>
 				</dl>
