--- a/typography.html
+++ b/typography.html
@@ -38,7 +38,7 @@
 					<dt class="">Components</dt>
 					<div style="overflow: hidden;">
 						<dd>
-							<a href="">Buttons</a>
+							<a href="buttons.html">Buttons</a>
 							<a href="">Inputs</a>
 							<a href="">Datatables</a>
 							<a href="">Element highlight</a>
