Fix colors & nav menu issues.

--- a/color.html
+++ b/color.html
@@ -75,12 +75,12 @@
 					<div class="colorCard">
 						<div class="colorCircle veryDarkGrey"></div>
 						<div class="colorName">very dark grey</div>
-						<div class="colorCode">#5e5e5e</div>
+						<div class="colorCode">#4a4d50</div>
 					</div>
 					<div class="colorCard">
 						<div class="colorCircle darkGrey"></div>
 						<div class="colorName">dark grey</div>
-						<div class="colorCode">#6e6e6e</div>
+						<div class="colorCode">#5c6164</div>
 					</div>
 					<div class="colorCard">
 						<div class="colorCircle mediumGrey"></div>
