--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
 					<dt class="">Components</dt>
 					<div style="overflow: hidden;">
 						<dd>
-							<a href="">Buttons</a>
-							<a href="">Inputs</a>
-							<a href="">Datatables</a>
-							<a href="">Element highlight</a>
-							<a href="">Selectors</a>
-							<a href="">Dialogs</a>
-							<a href="">Lists</a>
-							<a href="">Menu</a>
-							<a href="">Pickers</a>
-							<a href="">Progress & activity</a>
-							<a href="">Sliders</a>
-							<a href="">Chip & tags</a>
-							<a href="">Others...</a>
-							<a href="">Others...</a>
-							<a href="">Others...</a>
-							<a href="">Others...</a>
-							<a href="">Others...</a>
+							<a href="buttons.html">Buttons</a>
+							<a href="#">Inputs</a>
+							<a href="#">Datatables</a>
+							<a href="#">Element highlight</a>
+							<a href="#">Selectors</a>
+							<a href="#">Dialogs</a>
+							<a href="#">Lists</a>
+							<a href="#">Menu</a>
+							<a href="#">Pickers</a>
+							<a href="#">Progress & activity</a>
+							<a href="#">Sliders</a>
+							<a href="#">Chip & tags</a>
+							<a href="#">Others...</a>
+							<a href="#">Others...</a>
+							<a href="#">Others...</a>
+							<a href="#">Others...</a>
+							<a href="#">Others...</a>
 						</dd>
 					</div>
 				</dl>
